--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -71,81 +71,33 @@ TODO: back button back to class period, next question buttons
 </table>
 <%= submit_tag 'Update data', class: "updatebutton" %>
 
+<hr>
+<h1>
+Actual matches
+</h1>
+<%= render partial: 'match_table',
+  locals: {:potential_matches => @matched_questions,
+  :matches_array => 'matches'} %>
 
 <hr>
 <h1>
 Possible matches
 </h1>
-<table border=1>
-  <thead>
-    <tr>
-      <th> ID </th>
-      <th> course </th>
-      <th> class <br>period<br> code </th>
-      <th> index </th>
-      <th> image </th>
-      <th> barchart </th>
-      <th> does this match? </th>
-      <th> type of match? </th>
-    </tr>
-  </thead>
-<%#
-TODO course, class_period, image index
-TODO filter out same image matches (if any)
-TODO option to mark "no match"
-TODO potential matches that we decided were not matches at the bottom
-TODO integrate /question/:id with class_periods/:id
-TODO all question view, possible with insanely long lists of possible matches?
-TODO class for the td elements
-%>
-<% @possible_matches.each do |question| %>
-<%= fields_for "possible_matches[]", question do |q| %>
-  <tr>
-    <td align="center"> <b> <%= question.id %> </b> </td>
-    <% class_period = ClassPeriod.find_by(id: question.class_period_id) %>
-    <% course = Course.find_by(id: class_period.course_id) %>
-    <td align="center"> <%= course.folder_name %> </td>
-    <td align="center"> <%= class_period.session_code %> </td>
-    <td align="center"> <b> <%= question.question_index %> </b> </td>
-    <td class="imagecolumn">
-      <% question_img_url = "https://s3.amazonaws.com/iclickerviewer/%s/Images/%s_Q%d.jpg" %
-        [course.folder_name, class_period.session_code, question.question_index]
-      %>
-      <%= image_tag(question_img_url, :class => "myImg") %>
-    </td>
-    <td class="imagecolumn">
-      <% barchart_img_url = "https://s3.amazonaws.com/iclickerviewer/%s/Images/%s_C%d.jpg" %
-        [course.folder_name, class_period.session_code, question.question_index]
-      %>
-      <%= image_tag(barchart_img_url, :class => "myImg") %>
-    </td>
-    <td> matches the question above?<br>
-      <%= label_tag "possible_matches[#{q.object.id}][is_match][][]", 'unknown' %>
-      <%= radio_button_tag "possible_matches[#{q.object.id}][is_match][]", nil %>
-      <br>
-      <%= label_tag "possible_matches[#{q.object.id}][is_match][][0]", 'no' %>
-      <%= radio_button_tag "possible_matches[#{q.object.id}][is_match][]", 0 %>
-      <br>
-      <%= label_tag "possible_matches[#{q.object.id}][is_match][][1]", 'yes' %>
-      <%= radio_button_tag "possible_matches[#{q.object.id}][is_match][]", 1 %>
-      <br>
-    </td>
-    <td> if a match, what kind of match?<br>
-      <%= label_tag "possible_matches[#{q.object.id}][match_type][][]", 'unknown' %>
-      <%= radio_button_tag "possible_matches[#{q.object.id}][match_type][]", nil %>
-      <br>
-      <%= label_tag "possible_matches[#{q.object.id}][match_type][][0]", 'identical' %>
-      <%= radio_button_tag "possible_matches[#{q.object.id}][match_type][]", 0 %>
-      <br>
-      <%= label_tag "possible_matches[#{q.object.id}][match_type][][1]", 'modified' %>
-      <%= radio_button_tag "possible_matches[#{q.object.id}][match_type][]", 1 %>
-      <br>
-    </td>
-  </tr>
-<% end # foreach %>
-<% end # fields_for %>
+<%= render partial: 'match_table',
+  locals: {:potential_matches => @possible_matches,
+  :matches_array => 'possible_matches'} %>
+
+<hr>
+<h1>
+Nonmatching Questions
+</h1>
+<%= render partial: 'match_table',
+  locals: {:potential_matches => @nonmatching_questions,
+  :matches_array => 'nonmatches'} %>
+
+
+
 <% end # form_tag %>
-</table>
 
 <!-- Modal Image -->
 <div id="myModal" class="modal">
