formatting changes to course#show and course#index

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,7 +8,7 @@
     <th> Instructor </th>
     <th> avg num Qs<br> / class </th>
     <th> avg num secs<br> / question </th>
-    <th> num Qs to update<br> / total Qs </th>
+    <th> num classes<br> to update<br> / total classes </th>
     <th> num<br> matches </th>
     <th> num<br> possible<br>matches </th>
     <th> num<br> nonmatches </th>
