--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -17,7 +17,7 @@
     <th> avg num secs<br> / question </th>
     <th> num classes to update <br> / num classes</th>
     <th> matches </th>
-    <th> possible matches </th>
+    <th> possible<br> matches </th>
     <th> nonmatches </th>
   </tr>
   <% @classes.each do |sess| %>
