refactored modal image into a partial
app/views/application/_modal_image.html.erb

--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -247,8 +247,4 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
 <%= submit_tag 'Update data', class: "updatebutton" %>
 <% end %>
 
-<!-- Modal Image -->
-<div id="myModal" class="modal">
-  <!-- Modal Content (The Image) -->
-  <img class="modal-content" id="img01">
-</div>
+<%= render 'modal_image' %>
