--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,10 +10,6 @@ TODO: quick preview
 TODO: back button back to class period, next question buttons
 </div>
 
-<%= javascript_tag do %>
-  window.onload = Shared.setup_modal_image();
-<% end %>
-
 <%#
   TODO
   Show actual matches in DB
@@ -99,8 +95,4 @@ Nonmatching Questions
 
 <% end # form_tag %>
 
-<!-- Modal Image -->
-<div id="myModal" class="modal">
-  <!-- Modal Content (The Image) -->
-  <img class="modal-content" id="img01">
-</div>
+<%= render 'modal_image' %>
