tightened up formatting of course#show

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -11,11 +11,11 @@
 <table border=1>
   <tr>
     <th> date </th>
-    <th> class period name </th>
-    <th> link to class period </th>
-    <th> num questions </th>
-    <th> avg num secs<br> / question </th>
-    <th> num classes to update <br> / num classes</th>
+    <th> class period<br> name </th>
+    <th> link to class<br> period </th>
+    <th> num<br> questions </th>
+    <th> avg # secs<br> / question </th>
+    <th> # classes<br> to update <br> / num classes</th>
     <th> matches </th>
     <th> possible<br> matches </th>
     <th> nonmatches </th>
