--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -87,7 +87,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
         0: unknown<br>
         1: quiz<br>
         2: single<br>
-        3: paired
+        3: paired<br>
         4: non-MCQ<br>
         5: error<br>
       </span>
