--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
         <% end %>
         <% if defined?(@course) %>
           <li class="nav-item">
-            <span class="navbar-text"> <%= @course.name %> </span>
+            <span class="navbar-text"> <%= @course.name %> (<%= @course.folder_name %>) </span>
           </li>
         <% end %>
         <li><%= link_to "Home", root_path %></li>
